--- a/src/cloudflare/pages/index.html
+++ b/src/cloudflare/pages/index.html
@@ -3,20 +3,59 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Odyssey Management Landing Page</title>
+  <meta name="color-scheme" content="light dark" />
+  <meta name="description" content="Odyssey Management landing page — quick access to today's attendance form." />
+  <title>Odyssey Management</title>
+
   <style>
-    body { font-family: system-ui, Arial, sans-serif; max-width: 720px; margin: 40px auto; padding: 0 16px; }
-    a.btn { display: inline-block; padding: 14px 18px; border-radius: 10px; text-decoration: none; border: 1px solid #ccc; }
+    :root { --bg: #0b0c10; --card: #141622; --text: #e9ecf1; --muted: #aab2c0; --border: rgba(255,255,255,.12); }
+    @media (prefers-color-scheme: light) {
+      :root { --bg:#f6f7fb; --card:#ffffff; --text:#101323; --muted:#5b6475; --border: rgba(16,19,35,.12); }
+    }
+    * { box-sizing: border-box; }
+    body { margin:0; font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; background: var(--bg); color: var(--text); }
+    .wrap { max-width: 760px; margin: 0 auto; padding: 28px 16px 44px; }
+    .card { background: var(--card); border: 1px solid var(--border); border-radius: 16px; padding: 22px; box-shadow: 0 8px 28px rgba(0,0,0,.18); }
+    h1 { margin: 0 0 6px; font-size: 1.55rem; }
+    p { margin: 10px 0; color: var(--muted); line-height: 1.45; }
+    .btnrow { display: flex; gap: 10px; flex-wrap: wrap; margin-top: 16px; }
+    a.btn {
+      display: inline-flex; align-items: center; justify-content: center;
+      padding: 12px 14px; border-radius: 12px; text-decoration: none;
+      border: 1px solid var(--border); color: var(--text); background: transparent;
+      font-weight: 600;
+    }
+    a.btn.primary { background: rgba(92, 153, 255, .18); border-color: rgba(92, 153, 255, .35); }
+    a.btn:hover { transform: translateY(-1px); }
+    .small { font-size: 0.92rem; }
+    .mono { font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", monospace; }
+    .hint { margin-top: 14px; padding-top: 14px; border-top: 1px solid var(--border); }
+    footer { margin-top: 14px; font-size: 0.85rem; color: var(--muted); }
   </style>
 </head>
+
 <body>
-  <h1>Odyssey Management Landing Page</h1>
-  <p>Use the button below to open today’s attendance form.</p>
+  <div class="wrap">
+    <div class="card">
+      <h1>Odyssey Management</h1>
+      <p class="small">Quick access to the attendance form.</p>
 
-  <p><a class="btn" href="/form">Open today’s form</a></p>
+      <div class="btnrow">
+        <a class="btn primary" href="/form">Open today’s form</a>
+        <a class="btn" href="/redirects">Link hub</a>
+      </div>
 
-  <p style="margin-top:24px; font-size: 0.9em; color:#444;">
-    If this doesn’t work, try <a href="/redirects">Redirect hub</a>.
-  </p>
+      <div class="hint">
+        <p class="small">
+          If you’re here from a QR code, the stable redirect is:
+          <span class="mono">/form</span>
+        </p>
+      </div>
+
+      <footer>
+        If something looks off, refresh and try again — the form target is updated via redirects.
+      </footer>
+    </div>
+  </div>
 </body>
 </html>
