--- a/src/cloudflare/pages/404.html
+++ b/src/cloudflare/pages/404.html
@@ -32,7 +32,7 @@
       <div class="btnrow">
         <a class="btn primary" href="/form">Open today’s form</a>
         <a class="btn" href="/">Go to landing</a>
-        <a class="btn" href="/redirects">Link hub</a>
+        <a class="btn" href="/redirects/">Link hub</a>
       </div>
     </div>
   </div>
