--- a/src/cloudflare/pages/redirects/index.html
+++ b/src/cloudflare/pages/redirects/index.html
@@ -4,10 +4,11 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="color-scheme" content="light dark" />
-  <title>Odyssey Management — Link Hub</title>
+  <meta name="description" content="Odyssey Management landing page — quick access to today's attendance form." />
+  <title>Odyssey Management</title>
 
   <style>
-    :root { --bg:#0b0c10; --card:#141622; --text:#e9ecf1; --muted:#aab2c0; --border: rgba(255,255,255,.12); }
+    :root { --bg: #0b0c10; --card: #141622; --text: #e9ecf1; --muted: #aab2c0; --border: rgba(255,255,255,.12); }
     @media (prefers-color-scheme: light) {
       :root { --bg:#f6f7fb; --card:#ffffff; --text:#101323; --muted:#5b6475; --border: rgba(16,19,35,.12); }
     }
@@ -15,37 +16,41 @@
     body { margin:0; font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; background: var(--bg); color: var(--text); }
     .wrap { max-width: 760px; margin: 0 auto; padding: 28px 16px 44px; }
     .card { background: var(--card); border: 1px solid var(--border); border-radius: 16px; padding: 22px; box-shadow: 0 8px 28px rgba(0,0,0,.18); }
-    h1 { margin: 0 0 10px; font-size: 1.4rem; }
+    h1 { margin: 0 0 6px; font-size: 1.55rem; }
     p { margin: 10px 0; color: var(--muted); line-height: 1.45; }
-    ul { margin: 12px 0 0; padding-left: 18px; }
-    li { margin: 10px 0; }
-    a { color: inherit; text-decoration: underline; text-underline-offset: 3px; }
-    .btnrow { display:flex; gap:10px; flex-wrap:wrap; margin-top:16px; }
-    a.btn { display:inline-flex; padding: 12px 14px; border-radius: 12px; text-decoration:none; border:1px solid var(--border); font-weight:600; }
+    .btnrow { display: flex; gap: 10px; flex-wrap: wrap; margin-top: 16px; }
+    a.btn {
+      display: inline-flex; align-items: center; justify-content: center;
+      padding: 12px 14px; border-radius: 12px; text-decoration: none;
+      border: 1px solid var(--border); color: var(--text); background: transparent;
+      font-weight: 600;
+    }
     a.btn.primary { background: rgba(92, 153, 255, .18); border-color: rgba(92, 153, 255, .35); }
+    a.btn:hover { transform: translateY(-1px); }
+    .small { font-size: 0.92rem; }
     .mono { font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", monospace; }
+    .hint { margin-top: 14px; padding-top: 14px; border-top: 1px solid var(--border); }
+    footer { margin-top: 14px; font-size: 0.85rem; color: var(--muted); }
   </style>
 </head>
 
 <body>
   <div class="wrap">
     <div class="card">
-      <h1>Link Hub</h1>
-      <p>Useful stable links for attendance.</p>
-
-      <ul>
-        <li><a href="/form">Today’s attendance form</a> <span class="mono">(stable: /form)</span></li>
-        <li><a href="/">Landing page</a></li>
-      </ul>
+      <h1>Odyssey Management</h1>
+      <p class="small">Quick access to the attendance form.</p>
 
       <div class="btnrow">
         <a class="btn primary" href="/form">Open today’s form</a>
-        <a class="btn" href="/">Back to landing</a>
+        <a class="btn" href="/redirects/">Link hub</a>
       </div>
 
-      <p style="margin-top:16px;">
-        Targets are updated by editing the <span class="mono">_redirects</span> file in the repo.
-      </p>
+      <div class="hint">
+        <p class="small">
+          If you’re here from a QR code, the stable redirect is:
+          <span class="mono">/form</span>
+        </p>
+      </div>
     </div>
   </div>
 </body>
